--- a/app/styles/component/_fandom-app-smart-banner.scss
+++ b/app/styles/component/_fandom-app-smart-banner.scss
@@ -4,7 +4,7 @@
 	background: $wds-fandom-color-light-gray;
 	background-size: auto 100%;
 	display: flex;
-	height: 85px;
+	height: $fandom-app-smart-banner-height;
 	justify-content: flex-start;
 	width: 100%;
 	// one less than drawer as it cannot be visible when drawer opens
